[tool.poetry]
name = "open-notify-api"
version = "0.1.0"
description = "Rest API to get information on the ISS"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
click = "6.6"
flask = "0.11.1"
gunicorn = "19.6.0"
itsdangerous = "0.24"
jinja2 = "2.8"
markupsafe = "0.23"
newrelic = "2.66.0.49"
pyephem = "3.7.6.0"
redis = "2.10.5"
werkzeug = "0.11.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
