[tool.poetry]
name = "open-notify-api"
version = "0.1.0"
description = "Rest API to get information on the ISS"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
flask = "^3.0.3"
gunicorn = "^23.0.0"
pyephem = "^9.99"
redis = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
